symptoms page completed

--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -21,10 +21,15 @@ body {
         background: #ffffff;
         color: #004E90 !important;
 
-        svg {
+        svg path {
             fill: #004E90 !important;
         }
     }
+}
+
+.btn-green {
+    background: #079558;
+    color: #ffffff;
 }
 
 .search-wrapper {
