--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -2,6 +2,7 @@ body {
     background: #0A375D;
     color: #ffffff;
     font-size: 14px;
+    padding-top: 60px;
 }
 
 .navbar-dark {
@@ -130,7 +131,7 @@ body {
     width: 490px;
     background: #09365B;
     color: #ffffff;
-    z-index: 10;
+    z-index: 1030;
     font-size: 14px;
     height: 100%;
     overflow-y: auto;
@@ -168,4 +169,25 @@ body {
             margin-right: 0;
         }
     }
+}
+
+@media(max-width: 800px) {
+ .navbar-collapse {
+    height: calc(100vh - 50px);
+    position: relative;
+
+    .btn {
+        max-width: 250px;
+        margin: 35px 0 0;
+    }
+
+    .btn-group {
+        margin: 0 !important;
+        max-width: 250px;
+        position: absolute;
+        left: 0px;
+        bottom: 15px;
+        width: 300px;
+    }
+ }
 }
