--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -125,10 +125,10 @@ body {
 
 .right-bar {
     position: fixed;
-    right: -500px;
+    right: -590px;
     top: 0;
     bottom: 0;
-    width: 490px;
+    width: 590px;
     background: #09365B;
     color: #ffffff;
     z-index: 1030;
@@ -136,10 +136,43 @@ body {
     height: 100%;
     overflow-y: auto;
     transition: all 0.3s ease-in-out;
+    max-width: 100%;
 
     &.show {
         right: 0;
     }
+
+    .filter-wrapper {
+        background: #004E90;
+        position: sticky;
+        top: 0;
+
+        .filter {
+            font-size: 12px;
+
+            span {
+                margin: 0 8px 0 12px ;
+                display: inline-block;
+            }
+
+            .custom-select {
+                max-width: 110px;
+                display: inline-block;
+                font-size: 12px;
+                height: 26px;
+                padding: 4px 20px 4px 4px;
+                width: 106px;
+            }
+        }
+    }
+
+    table td {
+        border-top: 0;
+    }
+}
+
+.pointer {
+    cursor: pointer;
 }
 
 .info {
