--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -40,7 +40,7 @@ body {
     font-weight: 600;
 }
 
-.h4 {
+.h5 {
     font-weight: 600;
     margin-bottom: 0;
 }
@@ -81,6 +81,29 @@ body {
             content: "";
             width: 100%;
         }
+    }
+}
+
+.emg-call {
+    position: relative;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 4px;
+    overflow: hidden;
+
+    .icon {
+        padding: 6px 12px;
+        background: #079558;
+    }
+    .text {
+        padding: 6px 12px;
+        background: #00C571;
+    }
+
+    &:hover {
+        box-shadow: 0px 0px 6px #00C571
     }
 }
 
@@ -142,16 +165,17 @@ body {
     &.show {
         left: 0;
 
-        .content {
-            background: #09365B;
-            max-width: 620px;
-            font-size: 14px;
-            height: 100%;
-            overflow-y: auto;
-            color: #ffffff;
-            float: right;
-            max-width: 100%;
-        }
+    }
+    
+    .content {
+        background: #09365B;
+        width: 620px;
+        font-size: 14px;
+        height: 100%;
+        overflow-y: auto;
+        color: #ffffff;
+        float: right;
+        max-width: 100%;
     }
 
     .filter-wrapper {
@@ -167,13 +191,25 @@ body {
                 display: inline-block;
             }
 
-            .custom-select {
+            .filter-select {
                 max-width: 110px;
                 display: inline-block;
                 font-size: 12px;
-                height: 26px;
-                padding: 4px 20px 4px 4px;
                 width: 106px;
+                
+                .css-1pahdxg-control,
+                .css-yk16xz-control {
+                    min-height: 26px;
+                    
+                    .css-1gtu0rj-indicatorContainer,
+                    .css-tlfecz-indicatorContainer {
+                        padding: 4px 5px 4px 0;
+                    }
+                    .css-1okebmr-indicatorSeparator {
+                        margin: 0 2px 0 0px;
+                    }
+                }
+
             }
         }
     }
@@ -231,7 +267,7 @@ body {
             margin: 35px 0 0;
         }
 
-        .btn-group {
+        .emg-call {
             margin: 0 !important;
             max-width: 250px;
             position: absolute;
