Menu content changes

--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -192,10 +192,10 @@ body {
             }
 
             .filter-select {
-                max-width: 110px;
+                max-width: 112px;
                 display: inline-block;
                 font-size: 12px;
-                width: 106px;
+                width: 112px;
                 
                 .css-1pahdxg-control,
                 .css-yk16xz-control {
@@ -208,6 +208,10 @@ body {
                     .css-1okebmr-indicatorSeparator {
                         margin: 0 2px 0 0px;
                     }
+                }
+
+                .css-26l3qy-menu {
+                    color: #000000 !important;
                 }
 
             }
