--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -157,10 +157,17 @@ body {
     top: 0;
     bottom: 0;
     width: 100%;
-    background: rgba(0,0,0,0.75);
     z-index: 1030;
     transition: all 0.1s ease-in-out;
     max-width: 100%;
+    
+    .overlay {
+        background: rgba(0,0,0,0.75);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+    }
 
     &.show {
         left: 0;
@@ -177,48 +184,49 @@ body {
         max-width: 100%;
     }
 
-    .filter-wrapper {
-        background: #004E90;
-        position: sticky;
-        top: 0;
-
-        .filter {
-            font-size: 12px;
-
-            span {
-                margin: 0 8px 0 12px ;
-                display: inline-block;
-            }
-
-            .filter-select {
-                max-width: 112px;
-                display: inline-block;
-                font-size: 12px;
-                width: 112px;
-                
-                .css-1pahdxg-control,
-                .css-yk16xz-control {
-                    min-height: 26px;
-                    
-                    .css-1gtu0rj-indicatorContainer,
-                    .css-tlfecz-indicatorContainer {
-                        padding: 4px 5px 4px 0;
-                    }
-                    .css-1okebmr-indicatorSeparator {
-                        margin: 0 2px 0 0px;
-                    }
-                }
-
-                .css-26l3qy-menu {
-                    color: #000000 !important;
-                }
-
-            }
-        }
-    }
-
     table td {
         border-top: 0;
+    }
+}
+
+
+.filter-wrapper {
+    background: #004E90;
+    position: sticky;
+    top: 0;
+
+    .filter {
+        font-size: 12px;
+
+        span {
+            margin: 0 8px 0 12px ;
+            display: inline-block;
+        }
+
+        .filter-select {
+            max-width: 112px;
+            display: inline-block;
+            font-size: 12px;
+            width: 112px;
+            
+            .css-1pahdxg-control,
+            .css-yk16xz-control {
+                min-height: 26px;
+                
+                .css-1gtu0rj-indicatorContainer,
+                .css-tlfecz-indicatorContainer {
+                    padding: 4px 5px 4px 0;
+                }
+                .css-1okebmr-indicatorSeparator {
+                    margin: 0 2px 0 0px;
+                }
+            }
+
+            .css-26l3qy-menu {
+                color: #000000 !important;
+            }
+
+        }
     }
 }
 
