click to contact can call to number

--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -352,6 +352,7 @@ body {
         border-radius: 15px;
         margin-top: 12px;
         margin-right: 12px;
+        text-decoration: none;
 
         svg {
             display: inline-block;
