--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -25,6 +25,7 @@ body {
 .btn {
     text-decoration: none;
 }
+
 .btn-outline-white {
     border: 1px solid #ffffff;
     margin-right: 10px;
@@ -280,6 +281,7 @@ body {
         }
 
     }
+
     .toggle-rightbar {
         position: absolute;
         top: 0;
@@ -381,13 +383,9 @@ body {
     
 
     .emg-call {
-        margin: 0;
-        .icon {
-            // padding: 6px 8px;
-        }
+        margin: 0 !important;
 
         .text {
-            // padding: 6px 8px;
             font-size: 12px;
         }
     }
@@ -438,6 +436,25 @@ body {
     .filter-wrapper {
         .filter {
             margin: 10px 0 0;
+        }
+    }
+
+    .nav.nav-tabs {
+        .nav-item {
+            width: 50%;
+
+            .nav-link {
+                font-size: 18px !important;
+            }
+        }
+    }
+}
+
+@media(max-width: 350px) {
+    
+    .emg-call {
+        .icon {
+            display: none;
         }
     }
 }
