removed ai transmission and ragh, added social distance

--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -516,6 +516,7 @@ a {
 .symptoms {
     display: inline-block;
     min-height: 150px;
+    min-width: 150px;
     position: relative;
     margin: auto;
 
