top message bar added

--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -53,7 +53,7 @@ body {
     z-index: 1031;
     
     a {
-        color: #079558;
+        color: #00C571;
     }
 }
 
@@ -112,7 +112,7 @@ body {
 }
 
 .navbar-dark  {
-    top: 20px;
+    top: 28px;
 
     .navbar-nav {
         margin-left: 15%;
