--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -51,9 +51,13 @@ body {
     top: 0;
     width: 100%;
     z-index: 1031;
-    
+    padding: 5px 8px 8px;
+    display: block;
+    line-height: 1;
+
     a {
         color: #00C571;
+        line-height: 1.2;
     }
 }
 
