--- a/src/scss/_rightbar.scss
+++ b/src/scss/_rightbar.scss
@@ -56,6 +56,11 @@
             }
         }
 
+        .tab-content {
+            height: calc(100% - 80px);
+            overflow-y: auto;
+        }
+
         &.emergency {
             background: #00361F;
             .nav.nav-tabs{
