[Fix] : Fixed issue with active navbar

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -30,7 +30,7 @@
             }
 
             &:hover:after,
-            &.active:after {
+            &.activeT:after {
                 content: "";
                 width: 100%;
             }
