--- a/src/scss/_rightbar.scss
+++ b/src/scss/_rightbar.scss
@@ -70,7 +70,7 @@
 
                     .nav-link {
 
-                        &.active,
+                        &.activeT,
                         &:hover {
                             background-color: #00C06E;
                         }
