--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -13,6 +13,7 @@
     margin-right: 10px;
     padding: 6px 15px !important;
 
+    &.active,
     &:hover {
         background: #ffffff;
         color: #004E90 !important;
