css fixes for responsive 1200px size

--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -1,6 +1,10 @@
+@media (max-width: 1330px) {
+    .navbar-dark .navbar-nav {
+        margin-left: 15px;
+    }
+}
 
-
-@media(max-width: 800px) {
+@media(max-width: 991px) {
     .mobile-flag {
         display: inline;
     }
