--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -1,11 +1,6 @@
-
-
-.bg-bluelight {
-    background-color: #004E90;
-}
-
 .btn {
     text-decoration: none;
+    font-size: 14px;
 }
 
 .btn-outline-white {
