--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -34,6 +34,10 @@
                 width: 100%;
             }
         }
+
+        // .social-link a svg {
+        //     height: 15px;
+        // }
     }
 }
 
