--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -92,6 +92,7 @@
     }
 
     .filter-wrapper .filter {
+        vertical-align: top;
         > span {
             display: block;
             margin: 0 0 5px 0;
