--- a/src/scss/_rightbar.scss
+++ b/src/scss/_rightbar.scss
@@ -6,6 +6,7 @@
     top: 0;
     bottom: 0;
     width: 100%;
+    height: 100%;
     z-index: 1030;
     transition: all 0.1s ease-in-out;
     max-width: 100%;
@@ -16,7 +17,7 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        z-index: -1;
+        z-index: 0;
     }
 
     &.show {
@@ -28,7 +29,7 @@
         width: 620px;
         font-size: 14px;
         height: 100%;
-        overflow-y: auto;
+        overflow-y: hidden;
         color: #ffffff;
         float: right;
         max-width: 100%;
