--- a/src/scss/_filter.scss
+++ b/src/scss/_filter.scss
@@ -37,6 +37,7 @@
             display: inline-block;
             font-size: 12px;
             width: 112px;
+            vertical-align: middle;
 
             .css-1pahdxg-control,
             .css-yk16xz-control {
@@ -53,6 +54,10 @@
 
             .css-26l3qy-menu {
                 color: #000000 !important;
+            }
+
+            .css-1hwfws3 {
+                line-height: 1.2;
             }
 
         }
