--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -118,7 +118,9 @@ a {
 
 @import "rightbar";
 
-@import "notices-resources.scss";
+@import "notices-resources";
+
+@import "notification";
 
 @import "other";
 
