--- a/src/scss/_badges.scss
+++ b/src/scss/_badges.scss
@@ -25,6 +25,21 @@
     }
 }
 
+.covid-verified {
+    display: inline-block;
+    border-radius: 12px;
+    overflow: hidden;
+    font-size: 10px;
+    background: rgba(66, 170, 91, 0.4);
+    color: #ffffff;
+    vertical-align: middle;
+    line-height: 1;
+
+    span {
+        padding: 0px 8px 0px 1px;
+    }
+}
+
 .badge-cus:not(:only-child) {
     margin-bottom: 15px;
 }
