--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -12,6 +12,10 @@
         &.w-110 {
             width: 110px;
         }
+
+        &.w-125 {
+            width: 125px;
+        }
     }
 
     tbody td {
