--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -8,7 +8,7 @@
     margin-right: 10px;
     padding: 6px 15px !important;
 
-    &.active,
+    &.activeT,
     &:hover {
         background: #ffffff;
         color: #004E90 !important;
