--- a/src/scss/_loader.scss
+++ b/src/scss/_loader.scss
@@ -13,7 +13,7 @@
   rect {
     fill: none;
     stroke: #fff;
-    stroke-width: 5;
+    strokeWidth: 5;
     -webkit-animation: dash 3s cubic-bezier(0.35, 0.04, 0.63, 0.95) infinite;
     animation: dash 3s cubic-bezier(0.35, 0.04, 0.63, 0.95) infinite;
     stroke-dasharray: 100;
