--- a/src/scss/_badges.scss
+++ b/src/scss/_badges.scss
@@ -51,3 +51,24 @@
 .badge-cus:last-child {
     margin-bottom: 0px;
 }
+
+.badges-green {
+    padding: 4px 8px;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 7px;
+    color: #00C571;
+    background: lighten(#00C571, 55%);
+    font-size: 10px;
+    margin-right: 5px;
+}
+
+.badges-drak {
+    padding: 4px 8px;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 7px;
+    color: #000000;
+    background: lighten(#000000, 90%);
+    font-size: 10px;
+}
