--- a/src/scss/_notification.scss
+++ b/src/scss/_notification.scss
@@ -49,10 +49,10 @@
             margin: 0;
 
             .time {
-                display: block;
+                display: inline-block;
+                vertical-align: middle;
                 color: #76B1E3;
                 font-size: 10px;
-                margin-top: 10px;
             }
 
             .image-hold {
