--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -1,13 +1,17 @@
 .skiptranslate {
   visibility: hidden !important ;
 }
+html {
+    height: 100%;
+}
 
-html,body {
+body {
     background: #0A375D;
     color: #ffffff;
     font-size: 14px;
     padding-top: 80px;
     height: 100%;
+    top: 0 !important;
 }
 #root {
     min-height: calc(100% - 80px);
