--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -135,3 +135,8 @@ a {
 @import "responsive";
 
 @import "loader";
+
+.goog-text-highlight {
+    background: transparent;
+    box-shadow: none;
+}
