google translate css fixes

--- a/src/scss/style.min.scss
+++ b/src/scss/style.min.scss
@@ -137,6 +137,6 @@ a {
 @import "loader";
 
 .goog-text-highlight {
-    background: transparent !important;
+    background-color: transparent !important;
     box-shadow: none !important;
 }
