--- a/src/scss/_rightbar.scss
+++ b/src/scss/_rightbar.scss
@@ -2,6 +2,7 @@
 
 .right-bar {
     position: fixed;
+    display: block;
     left: 100%;
     top: 0;
     bottom: 0;
@@ -34,10 +35,13 @@
         height: 100%;
         overflow-y: hidden;
         color: #ffffff;
-        float: right;
+        // float: right;
         max-width: 100%;
         position: relative;
         padding-top: 28px;
+        display: block;
+        position: absolute;
+        right: 0;
         
         .nav.nav-tabs{
 
