--- a/src/scss/_rightbar.scss
+++ b/src/scss/_rightbar.scss
@@ -8,6 +8,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
+    height: 100vh;
     z-index: 1030;
     transition: all 0.1s ease-in-out;
     max-width: 100%;
