pular the FAQ to FAQs

--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -81,7 +81,7 @@
 
     .nav.nav-tabs {
         .nav-item {
-            flex: min-content;
+            flex: 1 1;
 
             .nav-link {
                 font-size: 18px !important;
