css fixes for mobile

--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -74,8 +74,12 @@
     }
 
     .filter-wrapper {
+        .search-wrapper {
+            display: block;
+        }
+
         .filter {
-            margin: 10px 0 0;
+            margin: 10px 5px 0;
         }
     }
 
