--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -57,6 +57,7 @@
             color: #ffffff;
             border-color: transparent;
             text-decoration: none;
+            height: 100%;
 
             &.active,
             &:hover {
