scrollbar change to default

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -135,8 +135,10 @@ a {
     }
 }
 
-.hm-5 {
-    min-height: 480px;
+.hm-3 {
+    min-height: 100%;
+    height: 360px ;
+    overflow-y: auto;
 }
 
 
