--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -6,6 +6,14 @@
 .navbar-dark  {
     top: 26px;
 
+    .navbar-brand {
+        span {
+            display: block;
+            line-height: 1;
+            font-size: 16px;
+        }
+    }
+
     .navbar-nav {
 
         .nav-link {
