Add prevention pages

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -104,7 +104,9 @@ a {
 .text-light {
     color: #535353 !important;
 }
-
+.text-onahau {
+    color: #CBE7FF;
+}
 
 // font-weight
 .font-weight-semibold {
