--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -88,3 +88,31 @@
         }
     }
 }
+
+.nav-dropdown {
+    cursor: pointer;
+    margin-right: 25px;
+
+    .dropdown-toggle {
+        padding: .5rem 0;
+    }
+
+    .dropdown-menu {
+        padding: 0;
+        overflow: hidden;
+
+        a {
+            text-decoration: none;
+            font-size: 13px;
+            border-bottom: 1px solid #9BC7ED;
+            padding: {
+                top: 8px;
+                bottom: 8px;
+            }
+        }
+    }
+
+    &:hover > .dropdown-menu {
+        display: block;
+    }
+}
