--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -100,6 +100,7 @@
     .dropdown-menu {
         padding: 0;
         overflow: hidden;
+        margin-top: 0;
 
         a {
             text-decoration: none;
