--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -92,23 +92,32 @@
 .nav-dropdown {
     cursor: pointer;
     margin-right: 25px;
-
+    
     .dropdown-toggle {
         padding: .5rem 0;
     }
-
-    .dropdown-menu {
+    
+    > .dropdown-menu {
         padding: 0;
         overflow: hidden;
         margin-top: 0;
+        max-width: 100%;
+        min-width: 170px;
 
-        a {
+        > a {
             text-decoration: none;
             font-size: 13px;
             border-bottom: 1px solid #9BC7ED;
-            padding: {
-                top: 8px;
-                bottom: 8px;
+            margin: 0 !important;
+            padding: 8px 12px !important;
+            color: #0A375D !important;
+
+            &:hover,&.activeT {
+                background: #9BC7ED;
+            }
+
+            &:after {
+                display: none;
             }
         }
     }
