css fixes for nav button in mobile

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -46,6 +46,12 @@
             &.btn:focus {
                 color: #000000;
             }
+
+            &.btn {
+                &:after {
+                    display: none;
+                }
+            }
         }
 
         // .social-link a svg {
