--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -29,8 +29,9 @@
     }
 
     .navbar-collapse {
-        height: calc(100vh - 50px);
+        height: calc(100vh - 80px);
         position: relative;
+        overflow-y: auto;
 
         .btn {
             max-width: 280px;
