build: added open source page

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -68,7 +68,9 @@ a {
 .bg-bluelight {
     background-color: #004E90;
 }
-
+.bg-greenlight {
+    background-color: #00C571;
+}
 .rounded {
     border-radius: 15px !important;
 }
