style(button): adjusted padding on emergency button

--- a/src/scss/_other.scss
+++ b/src/scss/_other.scss
@@ -35,7 +35,7 @@
         background: #079558;
     }
     .text {
-        padding: 6px 12px;
+        padding: .5rem 12px;
         background: #00C571;
     }
 
